k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: mveyone/todo2-mern-client-prod:latest
          ports:
            - containerPort: 80 # port of dockerfile
              protocol: TCP
          # env:
          #   - name: "REACT_APP_PROXY_HOST"
          #     value: "http://api"
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  # type: LoadBalancer
  type: ClusterIP
  selector:
    component: client # name of client deploy
  ports:
    - port: 3000
      targetPort: 80 # internal port of container
